full screen spacing fixed

--- a/react-app/src/components/VillagePage/VillagePage.css
+++ b/react-app/src/components/VillagePage/VillagePage.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 95vh;
   justify-content: center;
   align-items: center;
 }
